--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>Hello world, I am testing VSCode's Source Control</p>
     <p>Trevor was here</p>
+    <p>Hey Trevor</p>
 </body>
 </html>
